backend/.kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collabrain-backend1-service
  namespace: collabrain  # Set the namespace here
spec:
  selector:
    app: collabrain-backend1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
