backend/.kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collabrain-backend1-ingress
  namespace: collabrain
spec:
  rules:
  - host: cb1.cybertech13.eu.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: collabrain-backend1-service
            port:
              number: 80
